[main-private] refactoring of the scheme check method test, implemented only MISSING_SETTINGS mode