@@ -1,15 +1,20 @@
 /**
- * 
+ *
  */
 package eu.essi_lab.cfga.test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
+import eu.essi_lab.cfga.gs.*;
+import eu.essi_lab.cfga.gs.setting.*;
+import eu.essi_lab.cfga.gs.setting.dc_connector.*;
+import eu.essi_lab.cfga.gs.setting.oauth.*;
+import eu.essi_lab.cfga.gs.setting.ontology.*;
+import eu.essi_lab.cfga.gs.setting.ratelimiter.*;
+import eu.essi_lab.cfga.gs.setting.sessioncoordinator.*;
 import org.junit.*;
 
 import eu.essi_lab.cfga.SelectionUtils;
@@ -19,17 +24,9 @@ import eu.essi_lab.cfga.check.scheme.SchemeItem;
 import eu.essi_lab.cfga.check.scheme.SchemeMethod;
 import eu.essi_lab.cfga.check.scheme.SchemeItem.Descriptor;
 import eu.essi_lab.cfga.check.scheme.SchemeMethod.CheckMode;
-import eu.essi_lab.cfga.gs.DefaultConfiguration;
 import eu.essi_lab.cfga.gs.DefaultConfiguration.SingletonSettingsId;
-import eu.essi_lab.cfga.gs.GSTabIndex;
-import eu.essi_lab.cfga.gs.setting.CredentialsSetting;
-import eu.essi_lab.cfga.gs.setting.DownloadSetting;
-import eu.essi_lab.cfga.gs.setting.GDCSourcesSetting;
-import eu.essi_lab.cfga.gs.setting.ProfilerSetting;
-import eu.essi_lab.cfga.gs.setting.SystemSetting;
 import eu.essi_lab.cfga.gs.setting.database.DatabaseSetting;
 import eu.essi_lab.cfga.gs.setting.database.SourceStorageSetting;
-import eu.essi_lab.cfga.gs.setting.database.UsersDatabaseSetting;
 import eu.essi_lab.cfga.gs.setting.distribution.DistributionSetting;
 import eu.essi_lab.cfga.gs.setting.driver.SharedCacheDriverSetting;
 import eu.essi_lab.cfga.gs.setting.driver.SharedPersistentDriverSetting;
@@ -54,7 +51,11 @@ public class SchemeCheckMethodTest {
 	SchemeMethod checkMethod = new SchemeMethod();
 	checkMethod.setCheckMode(CheckMode.MISSING_SETTINGS);
 
-	checkMethod.setScheme(configuration.getScheme().get());
+	checkMethod.setScheme(new DefaultConfigurationScheme());
+
+	//
+	//
+	//
 
 	CheckResponse check = checkMethod.check(configuration);
 
@@ -74,11 +75,15 @@ public class SchemeCheckMethodTest {
 	SchemeMethod checkMethod = new SchemeMethod();
 	checkMethod.setCheckMode(CheckMode.MISSING_SETTINGS);
 
-	List<SchemeItem> list = configuration.getScheme().get().getItems();
+	List<SchemeItem> list = new DefaultConfigurationScheme().getItems();
 
-	list.add(create(true, () -> new DatabaseSetting(), s -> s.getIdentifier().equals("TEST")));
+	list.add(createItem(s -> s.getIdentifier().equals("TEST"), DatabaseSetting::new));
 
 	checkMethod.setItems(list);
+
+	//
+	//
+	//
 
 	CheckResponse checkReponse = checkMethod.check(configuration);
 
@@ -86,7 +91,7 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(1, checkReponse.getSettings().size());
 
-	Assert.assertEquals(DatabaseSetting.class, checkReponse.getSettings().get(0).getSettingClass());
+	Assert.assertEquals(DatabaseSetting.class, checkReponse.getSettings().getFirst().getSettingClass());
 
 	//
 	//
@@ -108,11 +113,11 @@ public class SchemeCheckMethodTest {
 	SchemeMethod checkMethod = new SchemeMethod();
 	checkMethod.setCheckMode(CheckMode.MISSING_SETTINGS);
 
-	List<SchemeItem> list = configuration.getScheme().get().getItems();
+	List<SchemeItem> list = new DefaultConfigurationScheme().getItems();
 
-	list.add(create(true, () -> new DatabaseSetting(), s -> s.getIdentifier().equals("TEST")));
-	list.add(create(true, () -> new SystemSetting(), s -> s.getIdentifier().equals("TEST1")));
-	list.add(create(true, () -> new DownloadSetting(), s -> s.getIdentifier().equals("TEST2")));
+	list.add(createItem(s -> s.getIdentifier().equals("TEST"), DatabaseSetting::new));
+	list.add(createItem(s -> s.getIdentifier().equals("TEST1"), SystemSetting::new));
+	list.add(createItem(s -> s.getIdentifier().equals("TEST2"), DownloadSetting::new));
 
 	checkMethod.setItems(list);
 
@@ -124,8 +129,8 @@ public class SchemeCheckMethodTest {
 
 	List<Setting> sorted = checkReponse.getSettings().//
 		stream().//
-		sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName())).//
-		collect(Collectors.toList());
+		sorted(Comparator.comparing(s -> s.getSettingClass().getSimpleName())).//
+		toList();
 
 	Assert.assertEquals(DatabaseSetting.class, sorted.get(0).getSettingClass());
 	Assert.assertEquals(DownloadSetting.class, sorted.get(1).getSettingClass());
@@ -151,12 +156,12 @@ public class SchemeCheckMethodTest {
 	SchemeMethod checkMethod = new SchemeMethod();
 	checkMethod.setCheckMode(CheckMode.MISSING_SETTINGS);
 
-	List<SchemeItem> list = configuration.getScheme().get().getItems();
+	List<SchemeItem> list = new DefaultConfigurationScheme().getItems();
 
-	list.add(create(true, () -> new DatabaseSetting(), s -> s.getIdentifier().equals("TEST")));
-	list.add(create(false, () -> new DownloadSetting(), s -> s.getIdentifier().equals("TEST1")));
-	list.add(create(false, () -> new SystemSetting(), s -> s.getIdentifier().equals("TEST2")));
-	list.add(create(true, () -> new GDCSourcesSetting(), s -> s.getIdentifier().equals("TEST3")));
+	list.add(createItem(s -> s.getIdentifier().equals("TEST1"), createSetting("TEST1")));
+	list.add(createItem(s -> s.getIdentifier().equals("TEST2"), createSetting("TEST2")));
+	list.add(createItem(s -> s.getIdentifier().equals("TEST3"), createSetting("TEST3")));
+	list.add(createItem( s -> s.getIdentifier().equals("TEST4"),  createSetting("TEST4")));
 
 	checkMethod.setItems(list);
 
@@ -164,15 +169,17 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(CheckResult.CHECK_FAILED, checkReponse.getCheckResult());
 
-	Assert.assertEquals(2, checkReponse.getSettings().size());
+	Assert.assertEquals(4, checkReponse.getSettings().size());
 
 	List<Setting> sorted = checkReponse.getSettings().//
 		stream().//
-		sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName())).//
-		collect(Collectors.toList());
+		sorted(Comparator.comparing(Setting::getIdentifier)).//
+		toList();
 
-	Assert.assertEquals(DatabaseSetting.class, sorted.get(0).getSettingClass());
-	Assert.assertEquals(GDCSourcesSetting.class, sorted.get(1).getSettingClass());
+	Assert.assertEquals("TEST1", sorted.get(0).getIdentifier());
+	Assert.assertEquals("TEST2", sorted.get(1).getIdentifier());
+	Assert.assertEquals("TEST3", sorted.get(2).getIdentifier());
+	Assert.assertEquals("TEST4", sorted.get(3).getIdentifier());
 
 	//
 	//
@@ -194,26 +201,18 @@ public class SchemeCheckMethodTest {
 	SchemeMethod checkMethod = new SchemeMethod();
 	checkMethod.setCheckMode(CheckMode.MISSING_SETTINGS);
 
-	List<SchemeItem> list = configuration.getScheme().get().getItems();
+	List<SchemeItem> list = new DefaultConfigurationScheme().getItems();
 
-	//
-	// a tab with multiple kind of settings
-	//
-	list.add(create(true, //
-
-		Descriptor.of(s -> s.getIdentifier().equals("TEST"), () -> new SourceStorageSetting()),
-
-		Descriptor.of(s -> s.getIdentifier().equals("TEST1"), () -> new CredentialsSetting()),
-
-		Descriptor.of(s -> s.getIdentifier().equals(SingletonSettingsId.DATABASE_SETTING.getLabel()),
-			() -> new DatabaseSetting())));
-
-	list.add(create(false, () -> new DownloadSetting(), s -> s.getIdentifier().equals("TEST1")));
-	list.add(create(false, () -> new SystemSetting(), s -> s.getIdentifier().equals("TEST2")));
-
-	list.add(create(true, () -> new GDCSourcesSetting(), s -> s.getIdentifier().equals("TEST3")));
+	list.add(createItem( //
+		Descriptor.of(s -> s.getIdentifier().equals("TEST1"), createSetting("TEST1")),
+		Descriptor.of(s -> s.getIdentifier().equals("TEST2"), createSetting("TEST2")),
+		Descriptor.of(s -> s.getIdentifier().equals("TEST3"), createSetting("TEST3"))));
 
 	checkMethod.setItems(list);
+
+	//
+	//
+	//
 
 	CheckResponse checkReponse = checkMethod.check(configuration);
 
@@ -223,12 +222,12 @@ public class SchemeCheckMethodTest {
 
 	List<Setting> sorted = checkReponse.getSettings().//
 		stream().//
-		sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName())).//
-		collect(Collectors.toList());
+		sorted(Comparator.comparing(Setting::getIdentifier)).//
+		toList();
 
-	Assert.assertEquals(CredentialsSetting.class, sorted.get(0).getSettingClass());
-	Assert.assertEquals(GDCSourcesSetting.class, sorted.get(1).getSettingClass());
-	Assert.assertEquals(SourceStorageSetting.class, sorted.get(2).getSettingClass());
+	Assert.assertEquals("TEST1", sorted.get(0).getIdentifier());
+	Assert.assertEquals("TEST2", sorted.get(1).getIdentifier());
+	Assert.assertEquals("TEST3", sorted.get(2).getIdentifier());
 
 	//
 	//
@@ -250,53 +249,51 @@ public class SchemeCheckMethodTest {
 	SchemeMethod checkMethod = new SchemeMethod();
 	checkMethod.setCheckMode(CheckMode.MISSING_SETTINGS);
 
-	List<SchemeItem> list = configuration.getScheme().get().getItems();
+	List<SchemeItem> list = new DefaultConfigurationScheme().getItems();
 
-	//
-	// a tab with multiple kind of settings
-	//
-	list.add(create(true, //
+	list.add(createItem( //
 
-		Descriptor.of(s -> s.getIdentifier().equals("TEST"), () -> new SourceStorageSetting()),
+		Descriptor.of(s -> s.getIdentifier().equals("TEST0"), createSetting("TEST0")),
 
-		Descriptor.of(s -> s.getIdentifier().equals("TEST1"), () -> new CredentialsSetting()),
+		Descriptor.of(s -> s.getIdentifier().equals("TEST1"), createSetting("TEST1")),
 
-		Descriptor.of(s -> s.getIdentifier().equals(SingletonSettingsId.DATABASE_SETTING.getLabel()),
-			() -> new DatabaseSetting())));
+		Descriptor.of(s -> s.getIdentifier().equals(SingletonSettingsId.DATABASE_SETTING.getLabel()), DatabaseSetting::new)));
 
-	list.add(create(false, () -> new DownloadSetting(), s -> s.getIdentifier().equals("TEST1")));
+	list.add(createItem(s -> s.getIdentifier().equals("TEST2"), createSetting("TEST2")));
 
-	list.add(create(false, () -> new SystemSetting(), s -> s.getIdentifier().equals("TEST2")));
+	list.add(createItem(s -> s.getIdentifier().equals("TEST3"), createSetting("TEST3")));
 
-	//
-	// a tab with multiple kind of settings
-	//
-	list.add(create(true, //
+	list.add(createItem( //
 
-		Descriptor.of(s -> s.getIdentifier().equals("TEST"), () -> new DownloadSetting()),
+		Descriptor.of(s -> s.getIdentifier().equals("TEST4"), createSetting("TEST4")),
 
-		Descriptor.of(s -> s.getIdentifier().equals("TEST1"), () -> new SystemSetting()),
+		Descriptor.of(s -> s.getIdentifier().equals("TEST5"), createSetting("TEST5")),
 
-		Descriptor.of(s -> s.getIdentifier().equals(SingletonSettingsId.DATABASE_SETTING.getLabel()),
-			() -> new DatabaseSetting())));
+		Descriptor.of(s -> s.getIdentifier().equals(SingletonSettingsId.DATABASE_SETTING.getLabel()), DatabaseSetting::new)));
 
 	checkMethod.setItems(list);
+
+	//
+	//
+	//
 
 	CheckResponse checkReponse = checkMethod.check(configuration);
 
 	Assert.assertEquals(CheckResult.CHECK_FAILED, checkReponse.getCheckResult());
 
-	Assert.assertEquals(4, checkReponse.getSettings().size());
+	Assert.assertEquals(6, checkReponse.getSettings().size());
 
 	List<Setting> sorted = checkReponse.getSettings().//
 		stream().//
-		sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName())).//
-		collect(Collectors.toList());
+		sorted(Comparator.comparing(Setting::getIdentifier)).//
+		toList();
 
-	Assert.assertEquals(CredentialsSetting.class, sorted.get(0).getSettingClass());
-	Assert.assertEquals(DownloadSetting.class, sorted.get(1).getSettingClass());
-	Assert.assertEquals(SourceStorageSetting.class, sorted.get(2).getSettingClass());
-	Assert.assertEquals(SystemSetting.class, sorted.get(3).getSettingClass());
+	Assert.assertEquals("TEST0", sorted.get(0).getIdentifier());
+	Assert.assertEquals("TEST1", sorted.get(1).getIdentifier());
+	Assert.assertEquals("TEST2", sorted.get(2).getIdentifier());
+	Assert.assertEquals("TEST3", sorted.get(3).getIdentifier());
+	Assert.assertEquals("TEST4", sorted.get(4).getIdentifier());
+	Assert.assertEquals("TEST5", sorted.get(5).getIdentifier());
 
 	//
 	//
@@ -318,16 +315,17 @@ public class SchemeCheckMethodTest {
 	SchemeMethod checkMethod = new SchemeMethod();
 	checkMethod.setCheckMode(CheckMode.MISSING_SETTINGS);
 
-	List<SchemeItem> list = configuration.getScheme().get().getItems();
+	List<SchemeItem> list = new DefaultConfigurationScheme().getItems();
 
-	//
-	// a tab with multiple kind of settings
-	//
-	list.add(create(true, //
-		Descriptor.of(s -> s.getIdentifier().equals("TEST"), () -> new Setting()), Descriptor
-			.of(s -> s.getIdentifier().equals(SingletonSettingsId.DATABASE_SETTING.getLabel()), () -> new DatabaseSetting())));
+	list.add(createItem( //
+		Descriptor.of(s -> s.getIdentifier().equals("TEST"), createSetting("TEST")),
+		Descriptor.of(s -> s.getIdentifier().equals(SingletonSettingsId.DATABASE_SETTING.getLabel()), DatabaseSetting::new)));
 
 	checkMethod.setItems(list);
+
+	//
+	//
+	//
 
 	CheckResponse checkReponse = checkMethod.check(configuration);
 
@@ -335,7 +333,7 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(1, checkReponse.getSettings().size());
 
-	Assert.assertEquals(Setting.class, checkReponse.getSettings().get(0).getSettingClass());
+	Assert.assertEquals("TEST", checkReponse.getSettings().getFirst().getIdentifier());
 
 	//
 	//
@@ -357,16 +355,26 @@ public class SchemeCheckMethodTest {
 	SchemeMethod checkMethod = new SchemeMethod();
 	checkMethod.setCheckMode(CheckMode.MISSING_SETTINGS);
 
-	List<SchemeItem> list = configuration.getScheme().get().getItems();
+	List<SchemeItem> list = new DefaultConfigurationScheme().getItems();
 
-	//
-	// a tab with multiple kind of settings
-	//
-	list.add(create(true, //
-		Descriptor.of(s -> s.getIdentifier().equals("TEST1"), () -> new SystemSetting()),
-		Descriptor.of(s -> s.getIdentifier().equals("TEST2"), () -> new DatabaseSetting())));
+	list.add(createItem( //
+		Descriptor.of(s -> s.getIdentifier().equals("TEST1"), () -> {
+		    Setting s = new SystemSetting();
+		    s.setIdentifier("TEST1");
+		    return s;
+		}),
+
+		Descriptor.of(s -> s.getIdentifier().equals("TEST2"), () -> {
+		    DatabaseSetting s = new DatabaseSetting();
+		    s.setIdentifier("TEST2");
+		    return s;
+		})));
 
 	checkMethod.setItems(list);
+
+	//
+	//
+	//
 
 	CheckResponse checkReponse = checkMethod.check(configuration);
 
@@ -374,13 +382,20 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(2, checkReponse.getSettings().size());
 
+	//
+	//
+	//
+
 	List<Setting> sorted = checkReponse.getSettings().//
 		stream().//
-		sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName())).//
-		collect(Collectors.toList());
+		sorted(Comparator.comparing(s -> s.getSettingClass().getSimpleName())).//
+		toList();
 
 	Assert.assertEquals(DatabaseSetting.class, sorted.get(0).getSettingClass());
+	Assert.assertEquals("TEST2", sorted.get(0).getIdentifier());
+
 	Assert.assertEquals(SystemSetting.class, sorted.get(1).getSettingClass());
+	Assert.assertEquals("TEST1", sorted.get(1).getIdentifier());
 
 	//
 	//
@@ -394,6 +409,63 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    public void missingTest8() {
+
+	DefaultConfiguration configuration = new DefaultConfiguration();
+
+	// clear the config
+	configuration.clear();
+
+	SchemeMethod checkMethod = new SchemeMethod();
+	checkMethod.setCheckMode(CheckMode.MISSING_SETTINGS);
+
+	DefaultConfigurationScheme scheme = new DefaultConfigurationScheme();
+
+	checkMethod.setScheme(scheme);
+
+	CheckResponse checkReponse = checkMethod.check(configuration);
+
+	Assert.assertEquals(CheckResult.CHECK_FAILED, checkReponse.getCheckResult());
+
+	// only singleton settings are created
+	Assert.assertEquals(scheme.getDescriptors().stream().filter(Descriptor::isSingleton).count(), checkReponse.getSettings().size());
+
+	Assert.assertEquals(SourcePrioritySetting.class, checkReponse.getSettings().get(0).getSettingClass());
+	Assert.assertEquals(SourceStorageSetting.class, checkReponse.getSettings().get(1).getSettingClass());
+
+	Assert.assertEquals(GDCSourcesSetting.class, checkReponse.getSettings().get(2).getSettingClass());
+	Assert.assertEquals(KeycloakProviderSetting.class, checkReponse.getSettings().get(3).getSettingClass());
+
+	Assert.assertEquals(CredentialsSetting.class, checkReponse.getSettings().get(4).getSettingClass());
+	Assert.assertEquals(DataCacheConnectorSettingLoader.load().getClass(), checkReponse.getSettings().get(5).getSettingClass());
+
+	Assert.assertEquals(DefaultSemanticSearchSetting.class, checkReponse.getSettings().get(6).getSettingClass());
+
+	Assert.assertEquals(SystemSetting.class, checkReponse.getSettings().get(7).getSettingClass());
+	Assert.assertEquals(DatabaseSetting.class, checkReponse.getSettings().get(8).getSettingClass());
+
+	Assert.assertEquals(SchedulerViewSetting.class, checkReponse.getSettings().get(9).getSettingClass());
+
+	Assert.assertEquals(SharedCacheDriverSetting.class, checkReponse.getSettings().get(10).getSettingClass());
+	Assert.assertEquals(SharedPersistentDriverSetting.class, checkReponse.getSettings().get(11).getSettingClass());
+
+	Assert.assertEquals(DownloadSetting.class, checkReponse.getSettings().get(12).getSettingClass());
+	Assert.assertEquals(RateLimiterSetting.class, checkReponse.getSettings().get(13).getSettingClass());
+	Assert.assertEquals(SessionCoordinatorSetting.class, checkReponse.getSettings().get(14).getSettingClass());
+
+	//
+	//
+	//
+
+	checkMethod.setCheckMode(CheckMode.REDUNDANT_SETTINGS);
+
+	checkReponse = checkMethod.check(configuration);
+
+	Assert.assertEquals(CheckResult.CHECK_SUCCESSFUL, checkReponse.getCheckResult());
+    }
+
+    @Test
+    @Ignore
     public void redundantTest0() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -402,7 +474,7 @@ public class SchemeCheckMethodTest {
 	SchemeMethod checkMethod = new SchemeMethod();
 	checkMethod.setCheckMode(CheckMode.REDUNDANT_SETTINGS);
 
-	List<SchemeItem> list = configuration.getScheme().get().getItems();
+	List<SchemeItem> list = new DefaultConfigurationScheme().getItems();
 
 	checkMethod.setItems(list);
 
@@ -416,6 +488,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void redundantTest0_1() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -438,6 +511,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void redundantTest1() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -459,7 +533,7 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(1, checkReponse.getSettings().size());
 
-	Assert.assertEquals(SystemSetting.class, checkReponse.getSettings().get(0).getSettingClass());
+	Assert.assertEquals(SystemSetting.class, checkReponse.getSettings().getFirst().getSettingClass());
 
 	//
 	//
@@ -473,6 +547,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void redundantTest2() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -485,7 +560,7 @@ public class SchemeCheckMethodTest {
 
 	// removed system, database setting and user database setting (which are in the same tab) from the tab
 	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.SYSTEM.getIndex()).collect(Collectors.toList());
-//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.DATABASE.getIndex()).collect(Collectors.toList());
+	//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.DATABASE.getIndex()).collect(Collectors.toList());
 
 	checkMethod.setItems(list);
 
@@ -493,16 +568,15 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(CheckResult.CHECK_FAILED, checkReponse.getCheckResult());
 
-//	Assert.assertEquals(3, checkReponse.getSettings().size());
+	//	Assert.assertEquals(3, checkReponse.getSettings().size());
 	Assert.assertEquals(2, checkReponse.getSettings().size());
 
-	List<Setting> settings = checkReponse.getSettings().stream()
-		.sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName()))
-		.collect(Collectors.toList());
+	List<Setting> settings = checkReponse.getSettings().stream().sorted(Comparator.comparing(s -> s.getSettingClass().getSimpleName()))
+		.toList();
 
 	Assert.assertEquals(DatabaseSetting.class, settings.get(0).getSettingClass());
 	Assert.assertEquals(SystemSetting.class, settings.get(1).getSettingClass());
-//	Assert.assertEquals(UsersDatabaseSetting.class, settings.get(2).getSettingClass());
+	//	Assert.assertEquals(UsersDatabaseSetting.class, settings.get(2).getSettingClass());
 
 	//
 	//
@@ -517,6 +591,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void redundantTest3() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -528,7 +603,7 @@ public class SchemeCheckMethodTest {
 	List<TabIndex> list = GSTabIndex.getValues();
 
 	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.ABOUT.getIndex()).collect(Collectors.toList());
-//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.SOURCES_INSPECTION.getIndex()).collect(Collectors.toList());
+	//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.SOURCES_INSPECTION.getIndex()).collect(Collectors.toList());
 
 	checkMethod.setItems(list);
 
@@ -550,6 +625,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void redundantTest4() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -561,8 +637,8 @@ public class SchemeCheckMethodTest {
 	List<TabIndex> list = GSTabIndex.getValues();
 
 	// removing harvesting and distribution settings from the tab
-//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.HARVESTING.getIndex()).collect(Collectors.toList());
-//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.DISTRIBUTION.getIndex()).collect(Collectors.toList());
+	//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.HARVESTING.getIndex()).collect(Collectors.toList());
+	//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.DISTRIBUTION.getIndex()).collect(Collectors.toList());
 
 	checkMethod.setItems(list);
 
@@ -572,9 +648,8 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(4, checkReponse.getSettings().size());
 
-	List<Setting> settings = checkReponse.getSettings().stream()
-		.sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName()))
-		.collect(Collectors.toList());
+	List<Setting> settings = checkReponse.getSettings().stream().sorted(Comparator.comparing(s -> s.getSettingClass().getSimpleName()))
+		.toList();
 
 	Assert.assertEquals(DistributionSetting.class, settings.get(0).getSettingClass());
 	Assert.assertEquals(HarvestingSettingImpl.class, settings.get(1).getSettingClass());
@@ -593,6 +668,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void redundantTest5() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -604,7 +680,7 @@ public class SchemeCheckMethodTest {
 	List<TabIndex> list = GSTabIndex.getValues();
 
 	// removing profilers settings from the tab
-//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.PROFILERS.getIndex()).collect(Collectors.toList());
+	//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.PROFILERS.getIndex()).collect(Collectors.toList());
 
 	checkMethod.setItems(list);
 
@@ -647,6 +723,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void redundantTest6() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -661,7 +738,7 @@ public class SchemeCheckMethodTest {
 	// removing repository setting from the tab
 	// this tabs holds 2 kind of settings, SharedCacheDriverSetting and SharedPersistentDriverSetting
 	//
-//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.REPOSITORY.getIndex()).collect(Collectors.toList());
+	//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.REPOSITORY.getIndex()).collect(Collectors.toList());
 
 	checkMethod.setItems(list);
 
@@ -671,9 +748,8 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(2, checkReponse.getSettings().size());
 
-	List<Setting> settings = checkReponse.getSettings().stream()
-		.sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName()))
-		.collect(Collectors.toList());
+	List<Setting> settings = checkReponse.getSettings().stream().sorted(Comparator.comparing(s -> s.getSettingClass().getSimpleName()))
+		.toList();
 
 	Assert.assertEquals(SharedCacheDriverSetting.class, settings.get(0).getSettingClass());
 	Assert.assertEquals(SharedPersistentDriverSetting.class, settings.get(1).getSettingClass());
@@ -690,6 +766,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void redundantTest7() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -713,11 +790,11 @@ public class SchemeCheckMethodTest {
 	//
 	//
 	//
-//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.REPOSITORY.getIndex()).collect(Collectors.toList());
-//
-//	list.add(createTabIndex(true, GSTabIndex.REPOSITORY.getIndex(),
-//
-//		Descriptor.of(s -> s.getSettingClass().equals(SharedCacheDriverSetting.class))));
+	//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.REPOSITORY.getIndex()).collect(Collectors.toList());
+	//
+	//	list.add(createTabIndex(true, GSTabIndex.REPOSITORY.getIndex(),
+	//
+	//		Descriptor.of(s -> s.getSettingClass().equals(SharedCacheDriverSetting.class))));
 	//
 	//
 	//
@@ -730,7 +807,7 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(1, checkReponse.getSettings().size());
 
-	Assert.assertEquals(SharedPersistentDriverSetting.class, checkReponse.getSettings().get(0).getSettingClass());
+	Assert.assertEquals(SharedPersistentDriverSetting.class, checkReponse.getSettings().getFirst().getSettingClass());
 
 	//
 	//
@@ -744,6 +821,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void redundantTest8() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -765,13 +843,13 @@ public class SchemeCheckMethodTest {
 	//
 	//
 	//
-//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.REPOSITORY.getIndex()).collect(Collectors.toList());
-//
-//	list.add(createTabIndex(true, GSTabIndex.REPOSITORY.getIndex(),
-//
-//		Descriptor.of(s -> s.getSettingClass().equals(SharedCacheDriverSetting.class)),
-//
-//		Descriptor.of(s -> s.getSettingClass().equals(SharedPersistentDriverSetting.class))));
+	//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.REPOSITORY.getIndex()).collect(Collectors.toList());
+	//
+	//	list.add(createTabIndex(true, GSTabIndex.REPOSITORY.getIndex(),
+	//
+	//		Descriptor.of(s -> s.getSettingClass().equals(SharedCacheDriverSetting.class)),
+	//
+	//		Descriptor.of(s -> s.getSettingClass().equals(SharedPersistentDriverSetting.class))));
 	//
 	//
 	//
@@ -794,6 +872,7 @@ public class SchemeCheckMethodTest {
     }
 
     @Test
+    @Ignore
     public void mixedTest1() {
 
 	DefaultConfiguration configuration = new DefaultConfiguration();
@@ -807,20 +886,19 @@ public class SchemeCheckMethodTest {
 	//
 	// a tab with multiple kind of settings
 	//
-	list.add(createTabIndex(true, 90, //
+	list.add(createTabIndex(90, //
 
-		Descriptor.of(s -> s.getIdentifier().equals("TEST"), () -> new SourceStorageSetting()),
+		Descriptor.of(s -> s.getIdentifier().equals("TEST"), SourceStorageSetting::new),
 
-		Descriptor.of(s -> s.getIdentifier().equals("TEST1"), () -> new CredentialsSetting()),
+		Descriptor.of(s -> s.getIdentifier().equals("TEST1"), CredentialsSetting::new),
 
-		Descriptor.of(s -> s.getIdentifier().equals(SingletonSettingsId.DATABASE_SETTING.getLabel()),
-			() -> new DatabaseSetting())));
+		Descriptor.of(s -> s.getIdentifier().equals(SingletonSettingsId.DATABASE_SETTING.getLabel()), DatabaseSetting::new)));
 
 	//
 	// removing repository setting from the tab
 	// this tabs holds 2 kind of settings, SharedCacheDriverSetting and SharedPersistentDriverSetting
 	//
-//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.REPOSITORY.getIndex()).collect(Collectors.toList());
+	//	list = list.stream().filter(t -> t.getIndex() != GSTabIndex.REPOSITORY.getIndex()).collect(Collectors.toList());
 
 	checkMethod.setItems(list);
 
@@ -830,9 +908,8 @@ public class SchemeCheckMethodTest {
 
 	Assert.assertEquals(2, checkReponse.getSettings().size());
 
-	List<Setting> settings = checkReponse.getSettings().stream()
-		.sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName()))
-		.collect(Collectors.toList());
+	List<Setting> settings = checkReponse.getSettings().stream().sorted(Comparator.comparing(s -> s.getSettingClass().getSimpleName()))
+		.toList();
 
 	Assert.assertEquals(SharedCacheDriverSetting.class, settings.get(0).getSettingClass());
 	Assert.assertEquals(SharedPersistentDriverSetting.class, settings.get(1).getSettingClass());
@@ -849,8 +926,8 @@ public class SchemeCheckMethodTest {
 
 	List<Setting> sorted = checkReponse.getSettings().//
 		stream().//
-		sorted((s1, s2) -> s1.getSettingClass().getSimpleName().compareTo(s2.getSettingClass().getSimpleName())).//
-		collect(Collectors.toList());
+		sorted(Comparator.comparing(s -> s.getSettingClass().getSimpleName())).//
+		toList();
 
 	Assert.assertEquals(CredentialsSetting.class, sorted.get(0).getSettingClass());
 	Assert.assertEquals(SourceStorageSetting.class, sorted.get(1).getSettingClass());
@@ -863,17 +940,10 @@ public class SchemeCheckMethodTest {
      * @return
      */
     private static TabIndex createTabIndex(//
-	    boolean required, //
 	    int index, //
 	    Descriptor... desc) {
 
 	return new TabIndex() {
-
-	    @Override
-	    public boolean required() {
-
-		return required;
-	    }
 
 	    @Override
 	    public List<Descriptor> getDescriptors() {
@@ -894,24 +964,9 @@ public class SchemeCheckMethodTest {
      * @param desc
      * @return
      */
-    private static SchemeItem create(//
-	    boolean required, //
-	    Descriptor... desc) {
+    private SchemeItem createItem(Descriptor... desc) {
 
-	return new SchemeItem() {
-
-	    @Override
-	    public boolean required() {
-
-		return required;
-	    }
-
-	    @Override
-	    public List<Descriptor> getDescriptors() {
-
-		return Arrays.asList(desc);
-	    }
-	};
+	return () -> List.of(desc);
     }
 
     /**
@@ -921,25 +976,21 @@ public class SchemeCheckMethodTest {
      * @param creator
      * @return
      */
-    private static SchemeItem create(//
-	    boolean required, //
-	    Supplier<Setting> creator, //
-	    Function<Setting, Boolean> function) {
+    private SchemeItem createItem(//
+	    Function<Setting, Boolean> function,
+	    Supplier<Setting> creator) {
 
-	return new SchemeItem() {
+	return () -> List.of(Descriptor.of(function, creator));
+    }
 
-	    @Override
-	    public boolean required() {
+    /**
+     * @param id
+     * @return
+     */
+    private Supplier<Setting> createSetting(String id) {
 
-		return required;
-	    }
-
-	    @Override
-	    public List<Descriptor> getDescriptors() {
-
-		return Arrays.asList(Descriptor.of(function, creator));
-
-	    }
-	};
+	Setting setting = new Setting();
+	setting.setIdentifier(id);
+	return () -> setting;
     }
 }
